Bug 12741 - Retail: Main Menu: Gap at bottom on highlighting a product having image of recommended size

--- a/skins/retail/css/products.css
+++ b/skins/retail/css/products.css
@@ -78,11 +78,11 @@
     font-size: 3px;
 }
 .product_image {
-    width: 205px;
-    height: 273px;
+    width: 204px;
+    height: 272px;
     text-align: center;
     font-size: 7px;
-    line-height: 270px;
+    line-height: 272px;
     overflow: hidden;
 }
 .product_image img {
